--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'                        //여기서부터 밑 까지 토큰
+	// 스프링 시큐리티 + 토큰 의존성
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
@@ -55,7 +56,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
     testImplementation 'org.mockito:mockito-core:5.12.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
-    testImplementation 'org.springframework.security:spring-security-core:6.3.1'    //여기서부터 위까지 토큰
+    testImplementation 'org.springframework.security:spring-security-core:6.3.1'
+	// 스프링 시큐리티 + 토큰 의존성
 }
 
 dependencyManagement {
