--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,13 @@ ext {
 	set('springAiVersion', "1.0.0")
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+		mavenBom "com.querydsl:querydsl-bom:5.1.0"
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -58,12 +65,21 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
     testImplementation 'org.springframework.security:spring-security-core:6.3.1'
 	// 스프링 시큐리티 + 토큰 의존성
-}
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
-	}
+	// === BOM을 각 구성에 명시 적용 ===
+	implementation platform("com.querydsl:querydsl-bom:5.1.0")
+	annotationProcessor platform("com.querydsl:querydsl-bom:5.1.0")
+	implementation platform("org.springframework.ai:spring-ai-bom:${springAiVersion}") // 1.0.0 (GA, Central 배포)
+
+	// QueryDSL - classifier는 '맵 표기'로, 버전은 BOM이 채움
+	implementation group: 'com.querydsl', name: 'querydsl-jpa', classifier: 'jakarta'
+	annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', classifier: 'jakarta'
+
+	// JPA 표준 API — QueryDSL APT가 컴파일 시점에 필요
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
+
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 }
 
 tasks.named('test') {
