--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,13 +29,15 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
         default_batch_fetch_size: 50
         jdbc:
           batch_size: 100
 
 logging:
   level:
-    org.hibernate.orm.jdbc.bind: trace
+    org:
+      hibernate.orm.jdbc.bind: trace
 
 jwt:
   issuer: ${JWT_ISSUER}
